added alerts to each action

--- a/css/style.css
+++ b/css/style.css
@@ -296,7 +296,7 @@ p {
 	border: none;
 	background-color: transparent;
 	font-size: 1.1rem;
-	color: #dedede;
+	color: grey;
 }
 
 .action-btn:hover {
